# payne-zero

./: .gitattributes  .gitignore  LICENSE  NOTICE  README.md  install.sh  payne_zero_tutorial.ipynb  pyproject.toml
examples/: payne_zero_tutorial.ipynb
fitter/: README.md  __init__.py  instrument.py  normalized.py  rotational_broadening.py
linelist_calibration/: README.md  __init__.py  catalog.py  optimize.py  physical.py
payne_zero_atmosphere/: README.md  __init__.py  __main__.py  _numba_cache.py  atmosphere_io.py  cli.py  config.py  constants.py  continuum_opacity.py  convection.py  convergence.py  data_files.py  direct_abundance.py  doppler.py  equation_of_state.py  hydrogen_line_profile.py  hydrostatic.py  install_runtime_data.py  line_catalog.py  line_opacity.py  line_profile_math.py  line_selection.py  microturbulence.py  molecular_data.py  molecular_equilibrium.py  population_layout.py  prewarm.py  radiative_pressure.py  radiative_transfer.py  rosseland_mean.py  run_setup.py  runner.py  runtime_state.py  source_catalogs.py  specific_internal_energy.py  synthesis_bridge.py  temperature_correction.py  transfer_kernels.py  warm_start.py
payne_zero_synthesis/: README.md  __init__.py  api.py  atmosphere.py  atmosphere_schema.json  atomic_lines.py  cli.py  constants.py  continuum.py  device.py  equation_of_state.py  ground_partition_table.py  hydrogen_lines.py  line_opacity.py  molecular_equilibrium.py  molecular_lines.py  paths.py  pipeline.py  prewarm.py  radiative_transfer.py  source_catalog_molecular_compiler.py  synthesis.py
source_data_files/: README.md  (+2 more)
(+75 files in other folders)
