[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "payne-zero"
version = "1.3"
description = "CPU stellar-atmosphere solving and GPU spectral synthesis"
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE", "NOTICE"]
authors = [
  {name = "Yuan-Sen Ting"},
]
requires-python = ">=3.11"
dependencies = [
  "numba>=0.59",
  "numpy>=1.26",
  "torch>=2.2",
]

[project.urls]
Repository = "https://github.com/tingyuansen/payne-zero"

[project.scripts]
payne-zero-atmosphere = "payne_zero_atmosphere.cli:main"
payne-zero-synthesis = "payne_zero_synthesis.cli:main"
payne-zero-prewarm = "payne_zero_atmosphere.prewarm:main"
payne-zero-synthesis-prewarm = "payne_zero_synthesis.prewarm:main"
payne-zero-install-data = "payne_zero_atmosphere.install_runtime_data:main"
payne-zero-fit-apogee = "fitter.apogee.cli:main"

[tool.setuptools.packages.find]
include = [
  "payne_zero_atmosphere*",
  "payne_zero_synthesis*",
  "fitter*",
  "linelist_calibration*",
]
[tool.setuptools.package-data]
payne_zero_synthesis = ["atmosphere_schema.json"]
"fitter.apogee" = ["data/*.npz"]
linelist_calibration = ["data/*.npz", "data/*.json"]
